contrast error fix main page

--- a/wdd230Final-templeInnAndSuites/styles/base.css
+++ b/wdd230Final-templeInnAndSuites/styles/base.css
@@ -215,7 +215,7 @@ main.block-head {
 
 .book-now a {
     background-color: var(--accent2);
-    color: var(--accent3);
+    color: var(--accent4);
     text-align: center;
     border-radius: 5px;
     padding: 5px;
